[package]
authors = ["Jason Housley <HousleyJK@gmail.com>"]
description = "Lightweight, event-driven WebSockets for Rust."
documentation = "http://housleyjk.github.io/ws-rs/ws/"
keywords = ["websocket", "mio", "event-driven", "io", "web"]
license = "MIT"
name = "ws"
readme = "README.md"
repository = "https://github.com/housleyjk/ws-rs"
version = "0.5.1"

[dependencies]
httparse = "*"
log = "*"
mio = { git = "https://github.com/ethcore/mio.git", branch = "v0.5.x" }
rand = "*"
sha1 = "*"
url = "1.0.0"
slab = "0.1.3"

[dev-dependencies]
clap = "*"
env_logger = "*"
term = "*"
time = "*"

[dependencies.libc]
optional = true
version = "*"

[dependencies.libz-sys]
optional = true
version = "*"

[dependencies.openssl]
optional = true
version = "*"

[features]
default = []
permessage-deflate = ["libz-sys", "libc"]
ssl = ["openssl"]
