[package]
authors = ["Jason Housley <HousleyJK@gmail.com>"]
description = "Lightweight, event-driven WebSockets for Rust."
documentation = "http://housleyjk.github.io/ws-rs/ws/"
keywords = ["websocket", "mio", "event-driven", "io", "web"]
license = "MIT"
name = "ws"
readme = "README.md"
repository = "https://github.com/housleyjk/ws-rs"
version = "0.5.2"

[dependencies]
httparse = "1.1.2"
log = "0.3.6"
mio = { git = "https://github.com/carllerche/mio.git" }
rand = "0.3"
sha1 = "0.2.0"
url = "1.0.0"
slab = { git = "https://github.com/carllerche/slab", rev = "5476efcafb"}
bytes = { git = "https://github.com/carllerche/bytes" } 


[dev-dependencies]
clap = "*"
env_logger = "*"
term = "*"
time = "*"

[dependencies.libc]
optional = true
version = "*"

[dependencies.libz-sys]
optional = true
version = "*"

[dependencies.openssl]
optional = true
version = "*"

[features]
default = []
permessage-deflate = ["libz-sys", "libc"]
ssl = ["openssl"]
